@@ -956,6 +956,7 @@ public class CBCBlocks {
 		.properties(p -> p.sound(SoundType.NETHERITE_BLOCK))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/solid_shot"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.tracerProjectileLoot())
 		.item(ProjectileBlockItem::new)
 		.tag(CBCTags.CBCItemTags.BIG_CANNON_PROJECTILES)
@@ -992,6 +993,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_LIGHT_GRAY))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/ap_shot"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.tracerProjectileLoot())
 		.lang("Armor Piercing (AP) Shot")
 		.item(ProjectileBlockItem::new)
@@ -1007,6 +1009,7 @@ public class CBCBlocks {
 		.properties(p -> p.sound(SoundType.WOOD))
 		.properties(p -> p.noOcclusion())
 		.blockstate((c, p) -> p.directionalBlock(c.get(), p.models().getExistingFile(CreateBigCannons.resource("block/traffic_cone"))))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.tracerProjectileLoot())
 		.item(TrafficConeBlockItem::new)
 		.initialProperties(() -> new Item.Properties().rarity(Rarity.EPIC))
@@ -1044,6 +1047,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_LIGHT_BLUE))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/smoke_shell"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot())
 		.item(FuzedProjectileBlockItem::new)
 		.tag(CBCTags.CBCItemTags.BIG_CANNON_PROJECTILES)
@@ -1084,6 +1088,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_RED))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.dropMortarShell())
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot())
 		.item(FuzedProjectileBlockItem::new)
 		.tag(CBCTags.CBCItemTags.BIG_CANNON_PROJECTILES)
