@@ -1,11 +1,121 @@
 {
   "replace": false,
   "values": [
+    "createbigcannons:log_cannon_chamber",
+    "createbigcannons:log_cannon_end",
+    "createbigcannons:wrought_iron_cannon_chamber",
+    "createbigcannons:wrought_iron_cannon_end",
+    "createbigcannons:wrought_iron_drop_mortar_end",
+    "createbigcannons:cast_iron_cannon_barrel",
+    "createbigcannons:cast_iron_cannon_chamber",
+    "createbigcannons:cast_iron_cannon_end",
+    "createbigcannons:cast_iron_quickfiring_breech",
+    "createbigcannons:cast_iron_sliding_breech",
+    "createbigcannons:unbored_cast_iron_cannon_barrel",
+    "createbigcannons:unbored_cast_iron_cannon_chamber",
+    "createbigcannons:incomplete_cast_iron_sliding_breech",
+    "createbigcannons:unbored_cast_iron_sliding_breech",
+    "createbigcannons:bronze_cannon_barrel",
+    "createbigcannons:bronze_cannon_chamber",
+    "createbigcannons:bronze_cannon_end",
+    "createbigcannons:bronze_quickfiring_breech",
+    "createbigcannons:bronze_sliding_breech",
+    "createbigcannons:unbored_bronze_cannon_barrel",
+    "createbigcannons:unbored_bronze_cannon_chamber",
+    "createbigcannons:incomplete_bronze_sliding_breech",
+    "createbigcannons:unbored_bronze_sliding_breech",
+    "createbigcannons:steel_cannon_barrel",
+    "createbigcannons:built_up_steel_cannon_barrel",
+    "createbigcannons:steel_cannon_chamber",
+    "createbigcannons:built_up_steel_cannon_chamber",
+    "createbigcannons:thick_steel_cannon_chamber",
+    "createbigcannons:very_small_steel_cannon_layer",
+    "createbigcannons:small_steel_cannon_layer",
+    "createbigcannons:medium_steel_cannon_layer",
+    "createbigcannons:large_steel_cannon_layer",
+    "createbigcannons:very_large_steel_cannon_layer",
+    "createbigcannons:unbored_very_small_steel_cannon_layer",
+    "createbigcannons:unbored_small_steel_cannon_layer",
+    "createbigcannons:unbored_medium_steel_cannon_layer",
+    "createbigcannons:unbored_large_steel_cannon_layer",
+    "createbigcannons:unbored_very_large_steel_cannon_layer",
+    "createbigcannons:steel_quickfiring_breech",
+    "createbigcannons:steel_sliding_breech",
+    "createbigcannons:incomplete_steel_sliding_breech",
+    "createbigcannons:unbored_steel_sliding_breech",
+    "createbigcannons:steel_screw_breech",
+    "createbigcannons:incomplete_steel_screw_breech",
+    "createbigcannons:unbored_steel_screw_breech",
+    "createbigcannons:nethersteel_cannon_barrel",
+    "createbigcannons:built_up_nethersteel_cannon_barrel",
+    "createbigcannons:nethersteel_cannon_chamber",
+    "createbigcannons:built_up_nethersteel_cannon_chamber",
+    "createbigcannons:thick_nethersteel_cannon_chamber",
+    "createbigcannons:very_small_nethersteel_cannon_layer",
+    "createbigcannons:small_nethersteel_cannon_layer",
+    "createbigcannons:medium_nethersteel_cannon_layer",
+    "createbigcannons:large_nethersteel_cannon_layer",
+    "createbigcannons:very_large_nethersteel_cannon_layer",
+    "createbigcannons:unbored_very_small_nethersteel_cannon_layer",
+    "createbigcannons:unbored_small_nethersteel_cannon_layer",
+    "createbigcannons:unbored_medium_nethersteel_cannon_layer",
+    "createbigcannons:unbored_large_nethersteel_cannon_layer",
+    "createbigcannons:unbored_very_large_nethersteel_cannon_layer",
+    "createbigcannons:nethersteel_screw_breech",
+    "createbigcannons:incomplete_nethersteel_screw_breech",
+    "createbigcannons:unbored_nethersteel_screw_breech",
+    "createbigcannons:cast_iron_autocannon_barrel",
+    "createbigcannons:cast_iron_autocannon_breech",
+    "createbigcannons:cast_iron_autocannon_recoil_spring",
+    "createbigcannons:incomplete_cast_iron_autocannon_recoil_spring",
+    "createbigcannons:incomplete_cast_iron_autocannon_breech",
+    "createbigcannons:unbored_cast_iron_autocannon_barrel",
+    "createbigcannons:unbored_cast_iron_autocannon_recoil_spring",
+    "createbigcannons:unbored_cast_iron_autocannon_breech",
+    "createbigcannons:bronze_autocannon_barrel",
+    "createbigcannons:bronze_autocannon_breech",
+    "createbigcannons:bronze_autocannon_recoil_spring",
+    "createbigcannons:incomplete_bronze_autocannon_recoil_spring",
+    "createbigcannons:incomplete_bronze_autocannon_breech",
+    "createbigcannons:unbored_bronze_autocannon_barrel",
+    "createbigcannons:unbored_bronze_autocannon_recoil_spring",
+    "createbigcannons:unbored_bronze_autocannon_breech",
+    "createbigcannons:steel_autocannon_barrel",
+    "createbigcannons:steel_autocannon_breech",
+    "createbigcannons:steel_autocannon_recoil_spring",
+    "createbigcannons:incomplete_steel_autocannon_recoil_spring",
+    "createbigcannons:incomplete_steel_autocannon_breech",
+    "createbigcannons:unbored_steel_autocannon_barrel",
+    "createbigcannons:unbored_steel_autocannon_recoil_spring",
+    "createbigcannons:unbored_steel_autocannon_breech",
+    "createbigcannons:cannon_loader",
+    "createbigcannons:cannon_mount",
+    "createbigcannons:yaw_controller",
     "createbigcannons:cannon_carriage",
+    "createbigcannons:cannon_drill",
+    "createbigcannons:cannon_builder",
+    "createbigcannons:solid_shot",
     "createbigcannons:he_shell",
     "createbigcannons:shrapnel_shell",
+    "createbigcannons:ap_shot",
+    "createbigcannons:traffic_cone",
     "createbigcannons:ap_shell",
     "createbigcannons:fluid_shell",
-    "createbigcannons:big_cartridge"
+    "createbigcannons:smoke_shell",
+    "createbigcannons:drop_mortar_shell",
+    "createbigcannons:big_cartridge",
+    "createbigcannons:autocannon_ammo_container",
+    "createbigcannons:creative_autocannon_ammo_container",
+    "createbigcannons:very_small_cast_mould",
+    "createbigcannons:small_cast_mould",
+    "createbigcannons:medium_cast_mould",
+    "createbigcannons:large_cast_mould",
+    "createbigcannons:very_large_cast_mould",
+    "createbigcannons:cannon_end_cast_mould",
+    "createbigcannons:sliding_breech_cast_mould",
+    "createbigcannons:screw_breech_cast_mould",
+    "createbigcannons:autocannon_breech_cast_mould",
+    "createbigcannons:autocannon_recoil_spring_cast_mould",
+    "createbigcannons:autocannon_barrel_cast_mould"
   ]
 }
