@@ -64,6 +64,7 @@ Fixed:
 - Fixed Smoke Shell and Drop Mortar Shell being invalid blocks for createbigcannons:fuzed_block block entity
 - Fixed Cannon Carriage rotation info tooltip and syncing
 - Fixed Disable All Failures applying to big cannon projectiles with 0 cannon power
+- Fixed schematics not saving data of many blocks by adding #create:safe_nbt
 
 ===
 
